# pycon_lithuania_24_vector_db

./: README.md  pyproject.toml
gc_db/: config.py
gc_db/streamlit/: home.py
gc_db/vector_db/: vector_db_in_memory.py
