[tool.poetry]
name = "gc-db"
version = "0.1.0"
description = ""
authors = ["Aurelien Massiot <aurelien.massiot@octo.com>"]
readme = "README.md"
packages = [{ include = "gc_db" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
watchdog = "^6.0.0"
deep-translator = "^1.11.4"
fashion-clip = "^0.2.2"
scikit-learn = "^1.6.0"
hnswlib = "^0.8.0"
numpy = "1.26.4"
torch = "1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
